syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/protos/endpoint/capabilities/all;allcapabilitiespb";
option java_package = "ru.yandex.alice.protos.endpoint.capabilities";
option java_outer_classname = "AllCapabilitiesProto";

import "alice/protos/endpoint/capabilities/alarm/capability.proto";
import "alice/protos/endpoint/capabilities/audio_file_player/capability.proto";
import "alice/protos/endpoint/capabilities/battery/capability.proto";
import "alice/protos/endpoint/capabilities/bio/capability.proto";
import "alice/protos/endpoint/capabilities/div_view/capability.proto";
import "alice/protos/endpoint/capabilities/iot_scenarios/capability.proto";
import "alice/protos/endpoint/capabilities/opening_sensor/capability.proto";
import "alice/protos/endpoint/capabilities/range_check/capability.proto";
import "alice/protos/endpoint/capabilities/route_manager/route_manager.proto";
import "alice/protos/endpoint/capabilities/vibration_sensor/capability.proto";
import "alice/protos/endpoint/capabilities/volume/capability.proto";
import "alice/protos/endpoint/capabilities/water_leak_sensor/capability.proto";
import "alice/protos/endpoint/capabilities/screensaver/capability.proto";
import "alice/protos/endpoint/capability.proto";
import "yandex_io/protos/capabilities/device_state_capability.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TCapabilityHolder {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    oneof Capability {
        option (NYT.variant_field_name) = "capability";
        // ability to turn on and off
        TOnOffCapability OnOffCapability = 1 [json_name = "on_off_capability", (NYT.column_name) = "on_off_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to find iot devices via wireless protocols (such as Zigbee)
        TIotDiscoveryCapability IotDiscoveryCapability = 2 [json_name = "iot_discovery_capability", (NYT.column_name) = "iot_discovery_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to observe and control level value
        TLevelCapability LevelCapability = 3 [json_name = "level_capability", (NYT.column_name) = "level_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to manage color - set rgb/hsv/temperatureK values and play color scenes
        TColorCapability ColorCapability = 4 [json_name = "color_capability", (NYT.column_name) = "color_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to control webOS based device, for example launch apps with params, etc
        TWebOSCapability WebOSCapability = 5 [json_name = "web_os_capability", (NYT.column_name) = "web_os_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to observe clicks of physical buttons
        TButtonCapability ButtonCapability = 6 [json_name = "button_capability", (NYT.column_name) = "button_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to change device equalizer settings
        TEqualizerCapability EqualizerCapability = 7 [json_name = "equalizer_capability", (NYT.column_name) = "equalizer_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to observe motion events
        TMotionCapability MotionCapability = 8 [json_name = "motion_capability", (NYT.column_name) = "motion_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to draw animations on device
        TAnimationCapability AnimationCapability = 9 [json_name = "animation_capability", (NYT.column_name) = "animation_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to make video calls through external providers (such as telegram)
        TVideoCallCapability VideoCallCapability = 10 [json_name = "video_call_capability", (NYT.column_name) = "video_call_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];

        TRouteManagerCapability RouteManagerCapability = 11 [json_name = "route_manager_capability", (NYT.column_name) = "route_manager_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to observe open/close events
        TOpeningSensorCapability OpeningSensorCapability = 12 [json_name = "opening_sensor_capability", (NYT.column_name) = "opening_sensor_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to observe vibration events
        TVibrationSensorCapability VibrationSensorCapability = 13 [json_name = "vibration_sensor_capability", (NYT.column_name) = "vibration_sensor_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to observe water leak events
        TWaterLeakSensorCapability WaterLeakSensorCapability = 14 [json_name = "water_leak_sensor_capability", (NYT.column_name) = "water_leak_sensor_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to observe battery level changes
        TBatteryCapability BatteryCapability = 15 [json_name = "battery_capability", (NYT.column_name) = "battery_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to perform range check
        TRangeCheckCapability RangeCheckCapability = 16 [json_name = "range_check_capability", (NYT.column_name) = "range_check_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];

        TDeviceStateCapability DeviceStateCapability = 17 [json_name = "device_state_capability", (NYT.column_name) = "device_state_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to render div cards
        TDivViewCapability DivViewCapability = 18 [json_name = "div_view_capability", (NYT.column_name) = "div_view_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to process voiceprint
        TBioCapability BioCapability = 19 [json_name = "bio_capability", (NYT.column_name) = "bio_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to set alarm
        TAlarmCapability AlarmCapability = 20 [json_name = "alarm_capability", (NYT.column_name) = "alarm_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to control local IoT scenarios
        TIotScenariosCapability IotScenariosCapablity = 21 [json_name = "iot_scenarios_capability", (NYT.column_name) = "iot_scenarios_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to control volume
        TVolumeCapability VolumeCapability = 22 [json_name = "volume_capability", (NYT.column_name) = "volume_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to control screensaver
        TScreensaverCapability ScreensaverCapability = 23 [json_name = "screensaver_capability", (NYT.column_name) = "screensaver_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
        // ability to play audio file
        TAudioFilePlayerCapability AudioFilePlayerCapability = 24 [json_name = "audio_file_player_capability", (NYT.column_name) = "audio_file_player_capability", (NYT.flags) = SERIALIZATION_PROTOBUF];
    }
}
