syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/protos/endpoint/events/all;alleventspb";
option java_package = "ru.yandex.alice.protos.endpoint.events.all";
option java_outer_classname = "AllEventsProto";

import "alice/protos/endpoint/capability.proto";
import "alice/protos/endpoint/capabilities/battery/capability.proto";
import "alice/protos/endpoint/capabilities/iot_scenarios/capability.proto";
import "alice/protos/endpoint/capabilities/opening_sensor/capability.proto";
import "alice/protos/endpoint/capabilities/vibration_sensor/capability.proto";
import "alice/protos/endpoint/capabilities/water_leak_sensor/capability.proto";
import "alice/protos/endpoint/capabilities/range_check/capability.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TCapabilityEventHolder {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    oneof Event {
        option (NYT.variant_field_name) = "event";
        TButtonCapability.TButtonClickEvent ButtonClickEvent = 3 [json_name = "button_click_event", (NYT.column_name) = "button_click_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TButtonCapability.TButtonDoubleClickEvent ButtonDoubleClickEvent = 4 [json_name = "button_double_click_event", (NYT.column_name) = "button_double_click_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TButtonCapability.TButtonLongPressEvent ButtonLongPressEvent = 5 [json_name = "button_long_press_event", (NYT.column_name) = "button_long_press_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TButtonCapability.TButtonLongReleaseEvent ButtonLongReleaseEvent = 6 [json_name = "button_long_release_event", (NYT.column_name) = "button_long_release_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TMotionCapability.TMotionDetectedEvent MotionDetectedEvent = 7 [json_name = "motion_detected_event", (NYT.column_name) = "motion_detected_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TWaterLeakSensorCapability.TWaterLeakSensorLeakEvent WaterLeakSensorLeakEvent = 8 [json_name = "water_leak_sensor_leak_event", (NYT.column_name) = "water_leak_sensor_leak_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TWaterLeakSensorCapability.TWaterLeakSensorDryEvent WaterLeakSensorDryEvent = 9 [json_name = "water_leak_sensor_dry_event", (NYT.column_name) = "water_leak_sensor_dry_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TVibrationSensorCapability.TVibrationSensorVibrationEvent VibrationSensorVibrationEvent = 10 [json_name = "vibration_sensor_vibration_event", (NYT.column_name) = "vibration_sensor_vibration_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TVibrationSensorCapability.TVibrationSensorTiltEvent VibrationSensorTiltEvent = 11 [json_name = "vibration_sensor_tilt_event", (NYT.column_name) = "vibration_sensor_tilt_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TVibrationSensorCapability.TVibrationSensorFallEvent VibrationSensorFallEvent = 12 [json_name = "vibration_sensor_fall_event", (NYT.column_name) = "vibration_sensor_fall_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TOpeningSensorCapability.TOpeningSensorOpenedEvent OpeningSensorOpenedEvent = 13 [json_name = "opening_sensor_opened_event", (NYT.column_name) = "opening_sensor_opened_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TOpeningSensorCapability.TOpeningSensorClosedEvent OpeningSensorClosedEvent = 14 [json_name = "opening_sensor_closed_event", (NYT.column_name) = "opening_sensor_closed_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TLevelCapability.TUpdateStateEvent LevelUpdateStateEvent = 15 [json_name = "level_update_state_event", (NYT.column_name) = "level_update_state_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TOnOffCapability.TUpdateStateEvent OnOffUpdateStateEvent = 16 [json_name = "on_off_update_state_event", (NYT.column_name) = "on_off_update_state_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TColorCapability.TUpdateStateEvent ColorUpdateStateEvent = 17 [json_name = "color_update_state_event", (NYT.column_name) = "color_update_state_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TBatteryCapability.TUpdateStateEvent BatteryUpdateStateEvent = 18 [json_name = "battery_update_state_event", (NYT.column_name) = "battery_update_state_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TRangeCheckCapability.TRangeCheckEvent RangeCheckEvent = 19 [json_name = "range_check_event", (NYT.column_name) = "range_check_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
        TIotScenariosCapability.TLocalStepsFinishedEvent LocalStepsFinishedEvent = 20 [json_name = "local_steps_finished_event", (NYT.column_name) = "local_steps_finished_event", (NYT.flags) = SERIALIZATION_PROTOBUF];
    }
}
